restricted Unsafe capability access to package or class scope